--- a/exercises/exe4/index.html
+++ b/exercises/exe4/index.html
@@ -12,6 +12,7 @@
 
     <section>
         <article class="container">
+            <input type="text" placeholder="Search by ID" class="inputfield">
             <input type="button" value="Click" id="aBtn">
         </article>
     </section>
